# reqres-kafka-rs

./: Cargo.toml  README.md  docker-compose.yml  rest-api.Dockerfile
client/: Cargo.toml
client/src/: main.rs
common/src/: lib.rs
kafka/: Cargo.toml
kafka/src/: lib.rs
request-proxy/: Cargo.toml  Dockerfile
request-proxy/src/: common.rs  future.rs  kafka.rs  kafka_controller.rs  main.rs  rest.rs  sync.rs  sync_2.rs
response-proxy/: Cargo.toml  Dockerfile
response-proxy/src/: main.rs
rest-api/: Cargo.toml  Dockerfile
rest-api/src/: main.rs
