[package]
name = "request-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
axum = "0.5.16"
# rdkafka = { version = "0.28.0", features = ["cmake-build"] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka", tag = "v0.29.0", features = ["cmake-build"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
