[package]
name = "request-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
kafka = { path = "../kafka" }
axum = "0.5.16"
tokio = { version = "1.21.1", features = ["full", "tracing"] }
uuid = { version = "1.1.2", features = ["v4"] }
